# ProjectDonut

./: .gitignore  CMakeLists.txt  Makefile  buffer.c  buffer.h  main.c  matrix.c  matrix.h  objects.c  objects.h  screen.c  screen.h  z_buffer.c  z_buffer.h
math/: matrix.c  matrix.h  vector2.c  vector2.h  vector3.c  vector3.h
